[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graph-matplotlib"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [{ name = "Silvano Cerza", email = "silvanocerza@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["matplotlib"]

[project.urls]
Documentation = "https://github.com/silvanocerza/graph-matplotlib#readme"
Issues = "https://github.com/silvanocerza/graph-matplotlib/issues"
Source = "https://github.com/silvanocerza/graph-matplotlib"

[tool.hatch.version]
path = "graph_matplotlib/__about__.py"

[tool.hatch.envs.default]
dependencies = ["coverage[toml]>=6.5", "pytest"]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = ["- coverage combine", "coverage report"]
cov = ["test-cov", "cov-report"]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = ["mypy>=1.0.0"]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:graph_matplotlib tests}"

[tool.coverage.run]
source_pkgs = ["graph_matplotlib", "tests"]
branch = true
parallel = true
omit = ["graph_matplotlib/__about__.py"]

[tool.coverage.paths]
graph_matplotlib = ["graph_matplotlib", "*/graph-matplotlib/graph_matplotlib"]
tests = ["tests", "*/graph-matplotlib/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
